--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kofi100.github.io/recipe-finder",
   "name": "react",
   "private": true,
   "version": "0.0.0",
@@ -7,9 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
