--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "formidable": "^3.5.4",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "spoonacular": "^2.0.2",
+    "superagent": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
